# FastVue_ToDo

./: .gitignore  README.md  environment.yml  main.py  package-lock.json  pyproject.toml
FastAPI_Todo/: main.py  pyproject.toml
Vue_Todo/: README.md  package-lock.json  vite.config.js
Vue_Todo/src/: App.vue
Vue_Todo/src/components/: TodoButton.vue  TodoCreator.vue  TodoHeader.vue  TodoItem.vue
Vue_Todo/src/router/: index.js
Vue_Todo/src/views/: TodosView.vue
todo/models/: models.py
